--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <h1>CRInfo</h1> 
                                 </div>
                                 <div class="soft" style=" font-size: 10px;">
-                                    <p>Shows supported cameras by the system</p> 
+                                    <p>Determines the supported camera models</p> 
                                 </div>
                             </div>
                             <div class="flip-card-back shadow" style="background-color: rgba(252, 222, 1, 1); width: 300px;border: 1px dashed #fff;">
@@ -163,23 +163,23 @@
                                 <h1>Idle Clock Locker</h1> 
                             </div>
                             <div class="soft" style=" font-size: 10px;">
-                                <p>Displays and locks the system idle clock</p> 
+                                <p>Displays and locks the computer idle time</p> 
                             </div>
                         </div>
                         <div class="flip-card-back shadow" style="background-color: #dc143c; width: 300px;border: 1px dashed #fff;">
                             <div style="width: 300px; height: 2px; float: left; background-color: #dc143c;"></div>
                             <div class="soft" style="color: white; margin: 20px; font-size: 12px; height: 253px; text-align: center; align-content: center; align-items: center; vertical-align: middle">
-                                Idle Clock Locker falsely informs the system about user interaction - it does not interfere with the use of the computer, does not move the cursor or does not automatically press the keys.
-                                <br/>
-                                <br/>
-                                For example: the messenger will not change its status to idle or the computer will not be turned off.
-                                <br/>
-                                <br/>
-                                Lock your system idle clock!
+                                Idle Clock Locker is a program that can simulate user activity at the computer by resetting the system's idle time without unexpected mouse or keyboard clicks.
                                 <br/>
                                 <br/>
                                 <br/>
-                                <span class="soft" style="font-size: 10px; text-transform: uppercase">v1.0.1 <br/>Freeware<br/>Win 7/8/10; .NET 4.5</span>
+                                <br/>
+                                Try it out!
+                                <br/>
+                                <br/>
+                                <br/>
+                                <br/>
+                                <span class="soft" style="font-size: 10px; text-transform: uppercase">v1.0.2 <br/>Freeware<br/>Win 7/8/10; .NET 4.5</span>
                                 <br/>
                             </div>
                             <div>
@@ -202,7 +202,7 @@
                                 <h1>Window Centering Helper</h1> 
                             </div>
                             <div class="soft" style=" font-size: 10px;">
-                                <p>Will help you center the windows</p> 
+                                <p>Center all the windows on your desktop</p> 
                             </div>
                         </div>
                         <div class="flip-card-back shadow" style="background-color: #66cdaa; width: 300px;border: 1px dashed #fff;">
@@ -214,7 +214,7 @@
                                 
                                 <br/>
                                 <br/>
-                                Just try it out!
+                                Try it out!
                                 <br/>
                                 <br/>
                                 <br/>
