--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Kamil Szymborski</title>
     <script>
-        window.addEventListener('resize', function() {
+        window.addEventListener('load', function() {
 	if (window.innerWidth <= 430) {
 		window.location.href = "https://www.instagram.com/p.swierczynska"; 
 	}
